sfdx-source/force-app/main/default/objects/Work_Step_Status_Mapping__mdt/Work_Step_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-1273: This configuration will be used in WorkStepsServiceImpl class for calculating the updated Status of Work Order and Work Plan on basis of Work Step Status.</description>
    <label>Work Step Status Mapping</label>
    <pluralLabel>Work Step Status Mappings</pluralLabel>
</CustomObject>