sfdx-source/force-app/main/default/objects/Work_Step_Status_Mapping__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>LEM-1273: Indicates the operator which will be used for calculating Workorder/WorkPlan status.</description>
    <label>Operator</label>
    <length>25</length>
    <type>Text</type>
</CustomField>