sfdx-source/force-app/main/default/objects/Work_Step_Status_Mapping__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>LEM-1273: Indicates the sequence of the status for sorting the status mapping.</description>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>