sfdx-source/force-app/main/default/objects/Work_Step_Status_Mapping__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>LEM-1273: Indicates the status of sobject.</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>