sfdx-source/force-app/main/default/objects/Work_Step_Status_Mapping__mdt/fields/Status_To_Apply__c.field-meta.xml
<CustomField>
    <fullName>Status_To_Apply__c</fullName>
    <description>LEM-1273: Indicates the status value which will be used for calculating WorkOrder/WorkPlan new Status.</description>
    <label>Status To Apply</label>
    <length>50</length>
    <type>Text</type>
</CustomField>