sfdx-source/force-app/main/default/objects/Work_Step_Status_Mapping__mdt/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>Sequence__c</columns>
    <columns>Status__c</columns>
    <columns>Operator__c</columns>
    <columns>Status_To_Apply__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
</ListView>